--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "bootstrap-datepicker",
   "version": "0.0.1",
+  "private": true,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/tarruda/bootstrap-datetimepicker"
+  },
   "devDependencies": {
     "uglify-js": "*",
     "less": "*"
