Changed package name to 'datetimepicker'
Will soon integrate timepicker funcitonality, so might as weel change the name
of the package.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bootstrap-datepicker",
+  "name": "bootstrap-datetimepicker",
   "version": "0.0.1",
   "private": true,
   "repository": {
