Refactored build/test scripts
- Removed twitter bootstrap as a git submodule and added it as a npm
  dependency
- Scripted download of jquery/bootstrap files for testing

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "less": "*",
     "mocha-phantomjs": "*",
     "mocha": "*",
-    "chai": "*"
+    "chai": "*",
+    "coffee-script": "*",
+    "bootstrap": "2.2.2"
   }
 }
