--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "bootstrap"]
 	path = bootstrap
 	url = git://github.com/twbs/bootstrap.git
+[submodule "moment"]
+	path = moment
+	url = git://github.com/moment/moment.git
