--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bootstrap-datetimepicker",
-  "version": "1.0.5",
+  "version": "2.0.0",
   "repository": {
     "type": "git",
     "url": "git://github.com/eonasdan/bootstrap-datetimepicker.git"
@@ -10,7 +10,8 @@
     "bootstrap",
     "datepicker",
     "datetimepicker",
-    "timepicker"
+    "timepicker",
+	"moment"
   ],
   "devDependencies": {
     "uglify-js": "*",
