--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "eonasdan-bootstrap-datetimepicker",
-  "version": "2.1.11",
+  "version": "2.2.20",
   "main": [
     "build/css/bootstrap-datetimepicker.min.css",
     "build/js/bootstrap-datetimepicker.min.js"
@@ -8,7 +8,7 @@
   "dependencies": {
     "jquery": ">=1.8.3",
     "bootstrap": ">= 3.0",
-    "moment": "2.3.1"
+    "moment": ">=2.3.1"
   },
   "homepage": "https://github.com/Eonasdan/bootstrap-datetimepicker",
   "authors": [
