--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
     "timepicker",
 	  "moment"
   ],
+  "dependencies": {
+      "moment": "~2.8.1",
+      "bootstrap": "~3.0",
+      "jquery": "~1.8.3"
+  },
   "devDependencies": {
     "grunt": "latest",
     "grunt-contrib-jshint": "latest",
