--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
       "moment": "~2.8.1",
       "bootstrap": "^3.0",
-      "jquery": "^1.8.3"
+      "jquery": ">=1.8.3"
   },
   "devDependencies": {
     "grunt": "latest",
