--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "moment": "~2.8.2",
     "bootstrap": "latest",
-    "jquery": "^1.8.3"
+    "jquery": ">=1.8.3 <2.2.0"
   },
   "devDependencies": {
     "grunt": "latest",
