--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "timepicker",
     "moment"
   ],
-  "dependencies": {
-    "moment": "~2.8.2",
-    "bootstrap": "latest",
-    "jquery": "latest"
+  "peerDependencies": {
+    "moment": "^2.8.2",
+    "bootstrap": "^3.3.1",
+    "jquery": ">=1.8.3 <3.0.0"
   },
   "devDependencies": {
     "grunt": "latest",
