--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bootstrap-datetimepicker",
-  "main": "src/js/bootstrap-datetimepicker.js",
-  "version": "3.1.3",
+  "filename": "js/bootstrap-datetimepicker.min.js",
+  "version": "4.0.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/eonasdan/bootstrap-datetimepicker.git"
@@ -18,18 +18,18 @@
     "moment"
   ],
   "dependencies": {
-      "moment": "~2.8.1",
-      "bootstrap": "^3.0",
-      "jquery": "^1.8.3"
+    "moment": "~2.8.2",
+	"bootstrap": "^3.0",
+    "jquery": "latest"
   },
   "devDependencies": {
     "grunt": "latest",
+    "grunt-contrib-jasmine": "^0.7.0",
     "grunt-contrib-jshint": "latest",
+    "grunt-contrib-less": "latest",
     "grunt-contrib-uglify": "latest",
     "grunt-jscs": "latest",
-    "load-grunt-tasks": "latest",
     "grunt-string-replace": "latest",
-    "grunt-contrib-less": "latest",
-    "bootstrap": "latest"
+    "load-grunt-tasks": "latest"
   }
 }
