--- a/bower.json
+++ b/bower.json
@@ -5,8 +5,7 @@
     "build/css/bootstrap-datetimepicker.min.css",
     "build/js/bootstrap-datetimepicker.min.js",
 	"src/less/_bootstrap-datetimepicker.less",
-	"src/less/bootstrap-datetimepicker-build.less",
-    "src/js/bootstrap-datetimepicker.js"
+	"src/less/bootstrap-datetimepicker-build.less"
   ],
   "dependencies": {
     "jquery": ">=1.8.3",
