--- a/bower.json
+++ b/bower.json
@@ -1,16 +1,13 @@
 {
   "name": "eonasdan-bootstrap-datetimepicker",
-  "version": "4.7.14",
+  "version": "4.13.28",
   "main": [
     "build/css/bootstrap-datetimepicker.min.css",
-    "build/js/bootstrap-datetimepicker.min.js",
-	"src/less/_bootstrap-datetimepicker.less",
-	"src/less/bootstrap-datetimepicker-build.less",
-    "src/js/bootstrap-datetimepicker.js"
+    "build/js/bootstrap-datetimepicker.min.js"
   ],
   "dependencies": {
     "jquery": ">=1.8.3",
-    "moment": ">=2.8.0"
+    "moment": ">=2.9.0"
   },
   "homepage": "https://github.com/Eonasdan/bootstrap-datetimepicker",
   "authors": [
