--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "dependencies": {
     "moment": "~2.8.2",
 	"bootstrap": "^3.0",
-    "jquery": "latest"
+    "jquery": ">=1.8.3 <2.2.0"
   },
   "devDependencies": {
     "grunt": "latest",
