--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bootstrap-datetimepicker",
   "main": "src/js/bootstrap-datetimepicker.js",
-  "version": "4.13.28",
+  "version": "4.14.30",
   "homepage": "http://eonasdan.github.io/bootstrap-datetimepicker/",
   "author": {
     "name": "Jonathan Peterson"
@@ -38,6 +38,7 @@
     "grunt-contrib-uglify": "latest",
     "grunt-jscs": "latest",
     "grunt-string-replace": "latest",
-    "load-grunt-tasks": "latest"
+    "load-grunt-tasks": "latest",
+    "grunt-nuget": "^0.1.4"
   }
 }
