--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "eonasdan-bootstrap-datetimepicker",
-  "version": "4.14.30",
+  "name": "spikyjt-bootstrap-datetimepicker",
+  "version": "4.14.32",
   "main": [
     "build/css/bootstrap-datetimepicker.min.css",
     "build/js/bootstrap-datetimepicker.min.js"
@@ -9,9 +9,10 @@
     "jquery": ">=1.8.3",
     "moment": ">=2.9.0"
   },
-  "homepage": "https://github.com/Eonasdan/bootstrap-datetimepicker",
+  "homepage": "https://github.com/spikyjt/bootstrap-datetimepicker",
   "authors": [
-    "Eonasdan"
+    "Eonasdan",
+    "spikyjt"
   ],
   "description": "bootstrap3 datetimepicker",
   "keywords": [
