Add ability to set time zone used by the datepicker
Incorporating the functionality of moment-timezone, added a new option
called timeZone that allows setting the time zone of the picker rather
than relying on the client time zone settings, useful for situations
where you want to display the calendar dates/times in a time zone
regardless of what time zone the client is set.

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     },
     "dependencies": {
         "moment": "~2.8",
+        "moment-timezone" : "~0.4",
         "bootstrap": "^3.0",
         "jquery": ">=1.8.3 <2.2.0"
     },
