--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,8 @@
   ],
   "dependencies": {
     "jquery": ">=1.8.3",
-    "moment": ">=2.9.0"
+    "moment": ">=2.9.0",
+    "moment-timezone": ">=0.4.0"
   },
   "homepage": "https://github.com/Eonasdan/bootstrap-datetimepicker",
   "authors": [
