--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,5 +12,6 @@ pages:
 - ['Changelog.md', 'Change Log']
 - ['ContributorsGuide.md', 'Dev Guide']
 - ['Extras.md', 'Extras']
+- ['FAQ.md', 'FAQs']
 - ['Version 4 Changelog.md', '']
 - ['Version 4 Contributors guide.md', '']
