--- a/package.json
+++ b/package.json
@@ -1,42 +1,44 @@
 {
-    "author": {
-        "name": "Jonathan Peterson"
-    },
-    "bugs": {
-        "url": "https://github.com/eonasdan/bootstrap-datetimepicker/issues"
-    },
-    "dependencies": {
-        "moment": "~2.10.5",
-        "bootstrap": "^3.3",
-        "jquery": ">=1.8.3 <2.2.0"
-    },
-    "description": "A date/time picker component designed to work with Bootstrap 3 and Momentjs. For usage, installation and demos see Project Site on GitHub",
-    "devDependencies": {
-        "grunt": "latest",
-        "grunt-contrib-jasmine": "^0.7.0",
-        "grunt-contrib-jshint": "latest",
-        "grunt-contrib-less": "latest",
-        "grunt-contrib-uglify": "latest",
-        "grunt-jscs": "latest",
-        "grunt-string-replace": "latest",
-        "load-grunt-tasks": "latest",
-        "grunt-nuget": "^0.1.4"
-    },
-    "homepage": "http://eonasdan.github.io/bootstrap-datetimepicker/",
-    "keywords": [
-        "twitter-bootstrap",
-        "bootstrap",
-        "datepicker",
-        "datetimepicker",
-        "timepicker",
-        "moment"
-    ],
-    "license": "MIT",
-    "main": "src/js/bootstrap-datetimepicker.js",
-    "name": "eonasdan-bootstrap-datetimepicker",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/eonasdan/bootstrap-datetimepicker.git"
-    },
-    "version": "4.17.42"
+  "author": {
+    "name": "Jonathan Peterson"
+  },
+  "bugs": {
+    "url": "https://github.com/eonasdan/bootstrap-datetimepicker/issues"
+  },
+  "dependencies": {
+    "moment": "~2.10.5",
+    "bootstrap": "^3.3",
+    "jquery": ">=1.8.3 <2.2.0"
+  },
+  "description": "A date/time picker component designed to work with Bootstrap 3 and Momentjs. For usage, installation and demos see Project Site on GitHub",
+  "devDependencies": {
+    "grunt": "latest",
+    "grunt-contrib-connect": "^0.11.2",
+    "grunt-contrib-jasmine": "^0.7.0",
+    "grunt-contrib-jshint": "latest",
+    "grunt-contrib-less": "latest",
+    "grunt-contrib-uglify": "latest",
+    "grunt-env": "^0.4.4",
+    "grunt-jscs": "latest",
+    "grunt-nuget": "^0.1.4",
+    "grunt-string-replace": "latest",
+    "load-grunt-tasks": "latest"
+  },
+  "homepage": "http://eonasdan.github.io/bootstrap-datetimepicker/",
+  "keywords": [
+    "twitter-bootstrap",
+    "bootstrap",
+    "datepicker",
+    "datetimepicker",
+    "timepicker",
+    "moment"
+  ],
+  "license": "MIT",
+  "main": "src/js/bootstrap-datetimepicker.js",
+  "name": "eonasdan-bootstrap-datetimepicker",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/eonasdan/bootstrap-datetimepicker.git"
+  },
+  "version": "4.17.42"
 }
