--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "url": "https://github.com/eonasdan/bootstrap-datetimepicker/issues"
   },
   "dependencies": {
-    "moment": "~2.10.5",
     "bootstrap": "^3.3",
-    "jquery": ">=1.8.3 <2.2.0"
+    "jquery": ">=1.8.3 <2.2.0",
+    "moment": "~2.10.5",
+    "moment-timezone": "^0.4.0"
   },
   "description": "A date/time picker component designed to work with Bootstrap 3 and Momentjs. For usage, installation and demos see Project Site on GitHub",
   "devDependencies": {
