--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
         "url": "https://github.com/eonasdan/bootstrap-datetimepicker/issues"
     },
     "dependencies": {
-        "moment": "~2.8",
-        "moment-timezone" : "~0.4",
+        "moment": "^2.8",
+        "moment-timezone" : "^0.4",
         "bootstrap": "^3.3",
         "jquery": ">=1.8.3 <2.2.0"
     },
