--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     },
     "description": "A date/time picker component designed to work with Bootstrap 3 and Momentjs. For usage, installation and demos see Project Site on GitHub",
     "devDependencies": {
-        "grunt": "latest",
+        "grunt": "^0.4.5",
         "grunt-contrib-jasmine": "^0.7.0",
         "grunt-contrib-jshint": "latest",
         "grunt-contrib-less": "latest",
