--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
     "moment": "^2.10",
     "moment-timezone": "^0.4.0"
   },
+  "dependencies": {
+    "bootstrap": "^3.3",
+    "jquery": "^1.8.3 || ^2.0",
+    "moment": "^2.10",
+    "moment-timezone": "^0.4.0"
+  },
   "description": "A date/time picker component designed to work with Bootstrap 3 and Momentjs. For usage, installation and demos see Project Site on GitHub",
   "devDependencies": {
     "grunt": "latest",
