Do not download excess files when the package is installed

--- a/bower.json
+++ b/bower.json
@@ -25,10 +25,7 @@
   "license": "MIT",
   "private": false,
   "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components",
-    "test",
-    "tests"
+    "**/*",
+    "!/build/*"
   ]
 }
