--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "description": "A date/time picker component designed to work with Bootstrap 3 and Momentjs. For usage, installation and demos see Project Site on GitHub",
   "devDependencies": {
-    "bootstrap": "^3.3",
+    "bootstrap": "^3.3 || ^4.1",
     "grunt": "latest",
     "grunt-contrib-connect": "^1.0.1",
     "grunt-contrib-jasmine": "^1.0.3",
@@ -20,8 +20,8 @@
     "grunt-string-replace": "latest",
     "jquery": "^1.8.3 || ^2.0 || ^3.0",
     "load-grunt-tasks": "latest",
-    "moment": "^2.10",
-    "moment-timezone": "^0.4.0 || ^0.5.0"
+    "moment": "^2.22",
+    "moment-timezone": "^0.5.14"
   },
   "homepage": "http://eonasdan.github.io/bootstrap-datetimepicker/",
   "keywords": [
