--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "eonasdan-bootstrap-datetimepicker",
+  "name": "lukewilson-bootstrap-datetimepicker",
   "version": "4.17.47",
   "main": [
     "build/css/bootstrap-datetimepicker.min.css",
@@ -9,9 +9,9 @@
     "jquery": ">=1.8.3",
     "moment": ">=2.10.5"
   },
-  "homepage": "https://github.com/Eonasdan/bootstrap-datetimepicker",
+  "homepage": "https://github.com/luke-wilson/bootstrap-datetimepicker",
   "authors": [
-    "Eonasdan"
+    "luke-wilson"
   ],
   "description": "bootstrap3 datetimepicker",
   "keywords": [
