--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "description": "A date/time picker component designed to work with Bootstrap 3 and Momentjs. For usage, installation and demos see Project Site on GitHub",
   "devDependencies": {
-    "grunt": "latest",
+    "grunt": "^1.3.0",
     "grunt-contrib-connect": "^1.0.1",
     "grunt-contrib-jasmine": "^2.2.0",
     "grunt-contrib-jshint": "latest",
@@ -46,5 +46,5 @@
     "type": "git",
     "url": "https://github.com/eonasdan/bootstrap-datetimepicker.git"
   },
-  "version": "4.17.47"
+  "version": "4.17.48"
 }
