--- a/src/nuget/Bootstrap.v3.Datetimepicker.CSS.nuspec
+++ b/src/nuget/Bootstrap.v3.Datetimepicker.CSS.nuspec
@@ -14,9 +14,7 @@ For usage, installation and demos see Project Site on GitHub
 
 For LESS version install Bootstrap.v3.Datetimepicker</description>
         <releaseNotes>
-          Check the change log on Github at https://github.com/Eonasdan/bootstrap-datetimepicker/wiki/Change-Log
-
-          IMPORANT! The Nuget packages will be depreciated in an upcoming release. Moving forward, Asp.Net/Nuget will NOT be delivering content packages like this one and you will need to use bower. See https://github.com/Eonasdan/bootstrap-datetimepicker/issues/1128 for more
+          Updated bootstrap dependency to fix xss
         </releaseNotes>
         <tags>bootstrap date time picker datetimepicker datepicker jquery</tags>
         <dependencies>
