--- a/package.json
+++ b/package.json
@@ -2,23 +2,29 @@
   "author": {
     "name": "Jonathan Peterson"
   },
+  "scripts": {
+    "start": "browser-sync start --config build/bs-config.js"
+  },
   "bugs": {
-    "url": "https://github.com/eonasdan/bootstrap-datetimepicker/issues"
+    "url": "https://github.com/eonasdan/tempus-dominus/issues"
   },
   "peerDependencies": {
-    "bootstrap": "^3.3",
-    "jquery": "^1.8.3 || ^2.0 || ^3.0",
-    "moment": "^2.10",
-    "moment-timezone": "^0.4.0 || ^0.5.0"
+    "bootstrap": ">=4.5.2",
+    "jquery": "^3.5.1",
+    "moment": "^2.29.0",
+    "moment-timezone": "^0.5.31",
+    "popper.js": "^1.16.1"
   },
   "dependencies": {
-    "bootstrap": "^3.3",
+    "bootstrap": "^4.5.2",
     "jquery": "^3.5.1",
-    "moment": "^2.10",
-    "moment-timezone": "^0.4.0"
+    "moment": "^2.29.0",
+    "moment-timezone": "^0.5.31",
+    "popper.js": "^1.16.1"
   },
-  "description": "A date/time picker component designed to work with Bootstrap 3 and Momentjs. For usage, installation and demos see Project Site on GitHub",
+  "description": "A robust and powerful date/time picker component. For usage, installation and demos see Project Site on GitHub",
   "devDependencies": {
+    "browser-sync": "^2.26.13",
     "grunt": "^1.3.0",
     "grunt-contrib-connect": "^1.0.1",
     "grunt-contrib-copy": "^1.0.0",
@@ -31,21 +37,18 @@
     "grunt-string-replace": "latest",
     "load-grunt-tasks": "latest"
   },
-  "homepage": "http://eonasdan.github.io/bootstrap-datetimepicker/",
+  "homepage": "https://getdatepicker.com/",
   "keywords": [
-    "twitter-bootstrap",
-    "bootstrap",
     "datepicker",
     "datetimepicker",
-    "timepicker",
-    "moment"
+    "timepicker"
   ],
   "license": "MIT",
-  "main": "src/js/bootstrap-datetimepicker.js",
-  "name": "eonasdan-bootstrap-datetimepicker",
+  "main": "src/js/tempus-dominus.js",
+  "name": "tempus-dominus",
   "repository": {
     "type": "git",
-    "url": "https://github.com/eonasdan/bootstrap-datetimepicker.git"
+    "url": "https://github.com/Eonasdan/tempus-dominus.git"
   },
-  "version": "4.17.49"
+  "version": "6.0.0-alpha1"
 }
