--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.5.4",
-    "bootstrap": "^5.0.0-alpha3",
-    "dayjs": "^1.9.6",
+    "bootstrap": "^5.0.0-beta1",
     "jquery": "^3.5.1"
   },
   "description": "A robust and powerful date/time picker component. For usage, installation and demos see Project Site on GitHub",
