--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.5.4",
-    "bootstrap": "^5.0.0-beta1",
-    "jquery": "^3.5.1"
+    "bootstrap": "^5.0.0-beta1"
   },
   "description": "A robust and powerful date/time picker component. For usage, installation and demos see Project Site on GitHub",
   "devDependencies": {
+    "@rollup/plugin-typescript": "^8.1.0",
+    "@types/node": "^14.14.22",
     "browser-sync": "^2.26.13",
     "grunt": "^1.3.0",
     "grunt-contrib-connect": "^1.0.1",
@@ -30,7 +31,10 @@
     "grunt-env": "^1.0.1",
     "grunt-nuget": "^0.3.1",
     "grunt-string-replace": "latest",
-    "load-grunt-tasks": "latest"
+    "load-grunt-tasks": "latest",
+    "rollup": "^2.38.0",
+    "tslib": "^2.1.0",
+    "typescript": "^4.1.3"
   },
   "homepage": "https://getdatepicker.com/",
   "keywords": [
