--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "name": "Jonathan Peterson"
   },
   "scripts": {
-    "start": "browser-sync start --config build/bs-config.js"
+    "start": "rollup -c && browser-sync start --config build/bs-config.js",
+    "rollup": "rollup -c",
+    "rollup-watch": "rollup -c -w"
   },
   "bugs": {
     "url": "https://github.com/eonasdan/tempus-dominus/issues"
@@ -21,6 +23,7 @@
     "@rollup/plugin-typescript": "^8.1.0",
     "@types/node": "^14.14.22",
     "browser-sync": "^2.26.13",
+    "delegated-events": "^1.1.2",
     "grunt": "^1.3.0",
     "grunt-contrib-connect": "^1.0.1",
     "grunt-contrib-copy": "^1.0.0",
