--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "module": "ES6",
     "target": "ES6",
-    "lib": ["es6", "dom", "es2016", "es2017", "dom.iterable"]
+    "lib": ["es6", "dom", "es2016", "es2017", "dom.iterable"],
+    "moduleResolution": "node"
   },
   "include": ["./src/js/*"],
   "exclude": ["node_modules"]
