--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
     "name": "Jonathan Peterson"
   },
   "scripts": {
-    "start": "rollup -c && browser-sync start --config build/bs-config.js",
-    "rollup": "rollup -c",
-    "rollup-watch": "rollup -c -w"
+    "start": "npm run build && browser-sync start --config build/bs-config.js",
+    "build": "npm run rollup && npm run sass",
+    "sass": "sass ./src/sass/tempus-dominus.scss ./src/docs/tempus-dominus.css",
+    "sass-watch": "sass ./src/sass/tempus-dominus.scss ./src/docs/tempus-dominus.css -w",
+    "rollup": "rollup -c ./build/rollup.config.js",
+    "rollup-watch": "rollup -c ./build/rollup.config.js -w"
   },
   "bugs": {
     "url": "https://github.com/eonasdan/tempus-dominus/issues"
@@ -23,18 +26,8 @@
     "@rollup/plugin-typescript": "^8.1.0",
     "@types/node": "^14.14.22",
     "browser-sync": "^2.26.13",
-    "grunt": "^1.3.0",
-    "grunt-contrib-connect": "^1.0.1",
-    "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-jasmine": "^2.2.0",
-    "grunt-contrib-jshint": "latest",
-    "grunt-contrib-less": "latest",
-    "grunt-contrib-uglify": "latest",
-    "grunt-env": "^1.0.1",
-    "grunt-nuget": "^0.3.1",
-    "grunt-string-replace": "latest",
-    "load-grunt-tasks": "latest",
     "rollup": "^2.38.0",
+    "sass": "^1.32.7",
     "tslib": "^2.1.0",
     "typescript": "^4.1.3"
   },
