--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,6 @@
     "lib": ["es6", "dom", "es2016", "es2017", "dom.iterable"],
     "moduleResolution": "node"
   },
-  "include": ["./src/js/*"],
+  "include": ["./src/js/**/*.ts"],
   "exclude": ["node_modules"]
 }
