--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "peerDependencies": {},
   "dependencies": {
-    "@popperjs/core": "^2.8.4",
+    "@popperjs/core": "^2.8.4"
   },
   "description": "A robust and powerful date/time picker component. For usage, installation and demos see Project Site on GitHub",
   "devDependencies": {
