--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,12 +1,20 @@
 site_name: Tempus Dominus
 repo_url: https://github.com/eonasdan/tempus-dominus
 edit_uri: edit/master/src/docs/
-extra_javascript: ['theme\js\base.js','//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/highlight.min.js']
-extra_css: ['theme\css\base.css','//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/styles/github.min.css']
+extra_javascript:
+  [
+    'theme\js\base.js',
+    '//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/highlight.min.js',
+  ]
+extra_css:
+  [
+    'theme\css\base.css',
+    '//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/styles/github.min.css',
+  ]
 docs_dir: src/docs
 site_dir: docs
 theme:
-    name: null
-    custom_dir: src/docs/theme
+  name: null
+  custom_dir: src/docs/theme
 nav:
-- Tempus Dominus: 'index.md'
+  - Tempus Dominus: 'index.md'
