--- a/package.json
+++ b/package.json
@@ -17,19 +17,27 @@
   },
   "peerDependencies": {},
   "dependencies": {
-    "@popperjs/core": "^2.8.4"
+    "@popperjs/core": "^2.9.2"
   },
   "description": "A robust and powerful date/time picker component. For usage, installation and demos see Project Site on GitHub",
   "devDependencies": {
-    "@rollup/plugin-node-resolve": "^11.2.0",
-    "@rollup/plugin-typescript": "^8.1.0",
+    "@rollup/plugin-node-resolve": "^13.0.0",
+    "@rollup/plugin-typescript": "^8.2.1",
     "@types/node": "^14.14.22",
-    "browser-sync": "^2.26.14",
-    "prettier": "^2.2.1",
-    "rollup": "^2.38.0",
-    "sass": "^1.32.7",
-    "tslib": "^2.1.0",
-    "typescript": "^4.1.3"
+    "bootstrap": "^5.0.2",
+    "browser-sync": "^2.27.3",
+    "chokidar": "^3.5.1",
+    "clean-css": "^5.1.3",
+    "dropcss": "^1.0.16",
+    "html-minifier-terser": "^5.1.1",
+    "jsdom": "^16.4.0",
+    "multiparty": "^4.2.2",
+    "prettier": "^2.3.2",
+    "rollup": "^2.52.4",
+    "sass": "^1.35.1",
+    "terser": "^5.4.0",
+    "tslib": "^2.3.0",
+    "typescript": "^4.3.4"
   },
   "homepage": "https://getdatepicker.com/",
   "keywords": [
