--- a/package.json
+++ b/package.json
@@ -19,32 +19,31 @@
     "url": "https://github.com/eonasdan/tempus-dominus/issues"
   },
   "peerDependencies": {
-    "@popperjs/core": "^2.9.2"
+    "@popperjs/core": "^2.10.1"
   },
   "dependencies": {
   },
   "description": "A robust and powerful date/time picker component. For usage, installation and demos see Project Site on GitHub",
   "devDependencies": {
-    "@rollup/plugin-node-resolve": "^13.0.0",
-    "@rollup/plugin-typescript": "^8.2.1",
-    "@types/node": "^14.14.22",
-    "bootstrap": "^5.0.2",
-    "browser-sync": "^2.27.4",
+    "@rollup/plugin-node-resolve": "^13.0.4",
+    "@rollup/plugin-typescript": "^8.2.5",
+    "@types/node": "^16.7.10",
+    "bootstrap": "^5.1.0",
+    "browser-sync": "^2.27.5",
     "chokidar": "^3.5.1",
-    "clean-css": "^5.1.3",
+    "clean-css": "^5.1.5",
     "dropcss": "^1.0.16",
     "html-minifier-terser": "^5.1.1",
-    "jsdom": "^16.4.0",
+    "jsdom": "^17.0.0",
     "multiparty": "^4.2.2",
     "prettier": "^2.3.2",
-    "rollup": "^2.52.8",
-    "sass": "^1.35.2",
-    "terser": "^5.4.0",
-    "tslib": "^2.3.0",
-    "typescript": "^4.3.5",
-    "concurrently": "^6.2.0",
-    "@digitak/esrun": "^1.2.6",
-    "@popperjs/core": "^2.9.2"
+    "rollup": "^2.56.3",
+    "sass": "^1.39.0",
+    "terser": "^5.7.2",
+    "tslib": "^2.3.1",
+    "typescript": "~4.3.5",
+    "concurrently": "^6.2.1",
+    "@popperjs/core": "^2.10.1"
   },
   "homepage": "https://getdatepicker.com/",
   "keywords": [
@@ -56,11 +55,11 @@
   "style": "dist/css/tempus-dominus.css",
   "sass": "scss/tempus-dominus.scss",
   "main": "src/js/tempus-dominus.js",
-  "name": "tempus-dominus",
+  "name": "@eonasdan/tempus-dominus",
   "repository": {
     "type": "git",
     "url": "https://github.com/Eonasdan/tempus-dominus.git"
   },
-  "version": "6.0.0-alpha1",
+  "version": "6.0.0-alpha1.0.3",
   "funding": "https://ko-fi.com/eonasdan"
 }
