--- a/package.json
+++ b/package.json
@@ -2,6 +2,17 @@
   "author": {
     "name": "Jonathan Peterson"
   },
+  "name": "@eonasdan/tempus-dominus",
+  "version": "6.0.0-alpha1.0.5",
+  "style": "dist/css/tempus-dominus.css",
+  "sass": "scss/tempus-dominus.scss",
+  "main": "dist/js/tempus-dominus.js",
+  "module": "dist/js/tempus-dominus.esm.js",
+  "files": [
+    "dist/**/*.*",
+    "src/js/**/*.ts",
+    "src/sass/**/*.scss"
+  ],
   "scripts": {
     "start": "npm run build && browser-sync start --config build/browser-sync-config.js",
     "build": "npm run rollup && npm run sass && node ./build/copyToDist.js",
@@ -52,14 +63,9 @@
     "timepicker"
   ],
   "license": "MIT",
-  "style": "dist/css/tempus-dominus.css",
-  "sass": "scss/tempus-dominus.scss",
-  "main": "src/js/tempus-dominus.js",
-  "name": "@eonasdan/tempus-dominus",
   "repository": {
     "type": "git",
     "url": "https://github.com/Eonasdan/tempus-dominus.git"
   },
-  "version": "6.0.0-alpha1.0.5",
   "funding": "https://ko-fi.com/eonasdan"
 }
