--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
     "module": "ES6",
     "target": "ES6",
     "lib": ["es6", "dom", "es2016", "es2017", "dom.iterable", "es2019"],
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "rootDir": "./src/js"
   },
   "include": ["./src/js/**/*.ts"],
   "exclude": ["node_modules"]
