--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "target": "ES6",
     "lib": ["es6", "dom", "es2016", "es2017", "dom.iterable", "es2019"],
     "moduleResolution": "node",
-    "rootDir": "./src/js"
+    "rootDir": "./src/js",
+    "declarationDir": "./types"
   },
   "include": ["./src/js/**/*.ts"],
   "exclude": ["node_modules"]
