--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "name": "Jonathan Peterson"
   },
   "name": "@eonasdan/tempus-dominus",
-  "version": "6.0.0-alpha1.0.13",
+  "version": "6.0.0-alpha14",
   "style": "dist/css/tempus-dominus.css",
   "sass": "scss/tempus-dominus.scss",
   "main": "dist/js/tempus-dominus.js",
@@ -56,7 +56,8 @@
     "sass": "^1.42.1",
     "terser": "^5.9.0",
     "tslib": "^2.3.1",
-    "typescript": "~4.4.3"
+    "typescript": "~4.4.3",
+    "globby": "^11.0.4"
   },
   "homepage": "https://getdatepicker.com/",
   "keywords": [
