--- a/package.json
+++ b/package.json
@@ -38,26 +38,25 @@
   "description": "A robust and powerful date/time picker component. For usage, installation and demos see Project Site on GitHub",
   "devDependencies": {
     "@popperjs/core": "^2.10.2",
-    "@rollup/plugin-node-resolve": "^13.0.5",
-    "@rollup/plugin-typescript": "^8.2.5",
+    "@rollup/plugin-node-resolve": "^13.0.6",
+    "@rollup/plugin-typescript": "^8.3.0",
     "rollup-plugin-postcss": "^4.0.1",
-    "@types/node": "^16.10.3",
-    "bootstrap": "^5.1.2",
-    "browser-sync": "^2.27.5",
+    "@types/node": "^16.11.7",
+    "bootstrap": "^5.1.3",
+    "browser-sync": "^2.27.7",
     "chokidar": "^3.5.1",
-    "clean-css": "^5.2.1",
-    "concurrently": "^6.3.0",
+    "clean-css": "^5.2.2",
+    "concurrently": "^6.4.0",
     "dropcss": "^1.0.16",
     "html-minifier-terser": "^5.1.1",
-    "jsdom": "^17.0.0",
+    "jsdom": "^18.1.0",
     "multiparty": "^4.2.2",
     "prettier": "^2.4.1",
-    "rollup": "^2.58.0",
-    "sass": "^1.42.1",
-    "terser": "^5.9.0",
+    "rollup": "^2.60.0",
+    "sass": "^1.43.4",
+    "terser": "^5.10.0",
     "tslib": "^2.3.1",
-    "typescript": "~4.4.3",
-    "globby": "^11.0.4"
+    "typescript": "~4.4.4"
   },
   "homepage": "https://getdatepicker.com/",
   "keywords": [
