* Added localization.startOfTheWeek. This allows setting the start of the week. *Added numberingSystem to DateTimeFormatOptions * Added meta property to options. * Fixed issue with 24 hour display formatting. #2414 * Fixed default input change formatting function to check for empty dates. #2411 * Fixed an issue with the unsubscribe method typing. #2411 * Fixed an issue where the picker would try to update the clock view even it wasn't enabled. #2438 * Fixed an issue using a time component would not go back to the clock view. #2431 * The picker will return to the view date and show the calendar or clock after being reopened. #2410 * Fixed clock/calendar switching to wait until the other view is ready before switching. #2421 * Fixed the options interface so all properties are optionsal. #2439 * BREAKING localization.dayViewHeaderFormat no longer takes a string but instead accepts a DateTimeFormatOptions. This will allow for more customization. #2420

--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,4 +1,4 @@
 contact_links:
   - name: Ask a question
-    url: https://github.com/twbs/bootstrap/discussions/new
-    about: Ask and discuss questions with other Bootstrap community members
+    url: https://github.com/Eonasdan/tempus-dominus/discussions
+    about: Ask and discuss questions with other community members
