--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "name": "Jonathan Peterson"
   },
   "name": "@eonasdan/tempus-dominus",
-  "version": "6.0.0-alpha15",
+  "version": "6.0.0-alpha17",
   "style": "dist/css/tempus-dominus.css",
   "sass": "scss/tempus-dominus.scss",
   "main": "dist/js/tempus-dominus.js",
@@ -40,7 +40,6 @@
     "@popperjs/core": "^2.10.2",
     "@rollup/plugin-node-resolve": "^13.0.6",
     "@rollup/plugin-typescript": "^8.3.0",
-    "rollup-plugin-postcss": "^4.0.1",
     "@types/node": "^16.11.7",
     "bootstrap": "^5.1.3",
     "browser-sync": "^2.27.7",
@@ -48,11 +47,14 @@
     "clean-css": "^5.2.2",
     "concurrently": "^6.4.0",
     "dropcss": "^1.0.16",
+    "glob": "^7.2.0",
+    "globby": "^11.0.4",
     "html-minifier-terser": "^5.1.1",
     "jsdom": "^18.1.0",
     "multiparty": "^4.2.2",
     "prettier": "^2.4.1",
     "rollup": "^2.60.0",
+    "rollup-plugin-postcss": "^4.0.1",
     "sass": "^1.43.4",
     "terser": "^5.10.0",
     "tslib": "^2.3.1",
