--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "name": "Jonathan Peterson"
   },
   "name": "@eonasdan/tempus-dominus",
-  "version": "6.0.0-alpha17",
+  "version": "6.0.0-beta1",
   "style": "dist/css/tempus-dominus.css",
   "sass": "scss/tempus-dominus.scss",
   "main": "dist/js/tempus-dominus.js",
@@ -27,7 +27,7 @@
     "docs": "node ./src/docs/make.js",
     "docs-watch": "node ./src/docs/make.js --watch",
     "release": "npm run build && npm run build:declarations",
-    "release-version": "node build/change-version.js"
+    "release-version": "npm run release && node build/change-version.js && npm run release"
   },
   "bugs": {
     "url": "https://github.com/eonasdan/tempus-dominus/issues"
