--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "name": "Jonathan Peterson"
   },
   "name": "@eonasdan/tempus-dominus",
-  "version": "6.0.0-beta1",
+  "version": "6.0.0-beta2",
   "style": "dist/css/tempus-dominus.css",
   "sass": "scss/tempus-dominus.scss",
   "main": "dist/js/tempus-dominus.js",
@@ -27,7 +27,7 @@
     "docs": "node ./src/docs/make.js",
     "docs-watch": "node ./src/docs/make.js --watch",
     "release": "npm run build && npm run build:declarations",
-    "release-version": "npm run release && node build/change-version.js && npm run release"
+    "release-version": "npm run release && node build/change-version.js"
   },
   "bugs": {
     "url": "https://github.com/eonasdan/tempus-dominus/issues"
@@ -37,28 +37,28 @@
   },
   "description": "A robust and powerful date/time picker component. For usage, installation and demos see Project Site on GitHub",
   "devDependencies": {
-    "@popperjs/core": "^2.10.2",
-    "@rollup/plugin-node-resolve": "^13.0.6",
+    "@popperjs/core": "^2.11.2",
+    "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-typescript": "^8.3.0",
-    "@types/node": "^16.11.7",
+    "@types/node": "^17.0.8",
     "bootstrap": "^5.1.3",
     "browser-sync": "^2.27.7",
     "chokidar": "^3.5.1",
     "clean-css": "^5.2.2",
-    "concurrently": "^6.4.0",
+    "concurrently": "^6.5.1",
     "dropcss": "^1.0.16",
     "glob": "^7.2.0",
-    "globby": "^11.0.4",
+    "globby": "^11.1.0",
     "html-minifier-terser": "^5.1.1",
-    "jsdom": "^18.1.0",
+    "jsdom": "^18.1.1",
     "multiparty": "^4.2.2",
-    "prettier": "^2.4.1",
-    "rollup": "^2.60.0",
-    "rollup-plugin-postcss": "^4.0.1",
-    "sass": "^1.43.4",
+    "prettier": "^2.5.1",
+    "rollup": "^2.64.0",
+    "rollup-plugin-postcss": "^4.0.2",
+    "sass": "^1.48.0",
     "terser": "^5.10.0",
     "tslib": "^2.3.1",
-    "typescript": "~4.4.4"
+    "typescript": "~4.5.4"
   },
   "homepage": "https://getdatepicker.com/",
   "keywords": [
