--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@popperjs/core": "^2.11.2",
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-typescript": "^8.3.0",
+    "rollup-plugin-typescript2": "0.31.1",
     "@types/node": "^17.0.8",
     "bootstrap": "^5.1.3",
     "browser-sync": "^2.27.7",
