--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,9 @@
     "lib": ["es6", "dom", "es2016", "es2017", "dom.iterable", "es2019"],
     "moduleResolution": "node",
     "rootDir": "./src/js",
-    "declarationDir": "./types"
+    "declarationDir": "./types",
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true
   },
   "include": ["./src/js/**/*.ts"],
   "exclude": ["node_modules"]
