--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "scripts": {
     "start": "npm run build && concurrently \"npm:*-watch\" \"npm run serve\"",
     "serve": "browser-sync start --config build/browser-sync-config.js",
-    "build": "npm run rollup && node ./build/copyToDist.js",
+    "build": "node ./build/copyToDist.js && npm run rollup",
     "build:plugins": "node ./build/plugins.js",
     "build:declarations": "tsc --declaration --emitDeclarationOnly --outDir types",
     "sass": "sass ./src/sass/tempus-dominus.scss ./dist/css/tempus-dominus.css",
@@ -40,7 +40,6 @@
   "devDependencies": {
     "@popperjs/core": "^2.11.2",
     "@rollup/plugin-node-resolve": "^13.1.3",
-    "@rollup/plugin-typescript": "^8.3.0",
     "@types/node": "^17.0.8",
     "bootstrap": "^5.1.3",
     "browser-sync": "^2.27.7",
@@ -60,7 +59,8 @@
     "sass": "^1.48.0",
     "terser": "^5.10.0",
     "tslib": "^2.3.1",
-    "typescript": "~4.5.4"
+    "typescript": "~4.5.4",
+    "rollup-plugin-terser":"^7.0.2"
   },
   "homepage": "https://getdatepicker.com/",
   "keywords": [
