--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
     "terser": "^5.10.0",
     "tslib": "^2.3.1",
     "typescript": "~4.5.4",
-    "rollup-plugin-terser":"^7.0.2"
+    "rollup-plugin-terser":"^7.0.2",
+    "@rollup/plugin-typescript": "^8.3.1"
   },
   "homepage": "https://getdatepicker.com/",
   "keywords": [
