--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "devDependencies": {
     "@popperjs/core": "^2.11.2",
     "@rollup/plugin-node-resolve": "^13.1.3",
+    "@rollup/plugin-typescript": "^8.3.1",
     "@types/node": "^17.0.8",
     "bootstrap": "^5.1.3",
     "browser-sync": "^2.27.7",
@@ -55,13 +56,12 @@
     "prettier": "^2.5.1",
     "rollup": "^2.64.0",
     "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "0.31.1",
     "sass": "^1.48.0",
     "terser": "^5.10.0",
     "tslib": "^2.3.1",
-    "typescript": "~4.5.4",
-    "rollup-plugin-terser":"^7.0.2",
-    "@rollup/plugin-typescript": "^8.3.1"
+    "typescript": "~4.5.4"
   },
   "homepage": "https://getdatepicker.com/",
   "keywords": [
