--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "files": [
     "dist/**/*",
     "src/js/**/*.ts",
-    "src/sass/**/*.scss",
+    "src/scss/**/*.scss",
     "types/**/*"
   ],
   "scripts": {
@@ -21,7 +21,7 @@
     "build": "node ./build/copyToDist.js && npm run rollup",
     "build:plugins": "node ./build/plugins.js",
     "build:declarations": "tsc --declaration --emitDeclarationOnly --outDir types",
-    "sass": "sass ./src/sass/tempus-dominus.scss ./dist/css/tempus-dominus.css",
+    "sass": "sass src/scss/tempus-dominus.scss ./dist/css/tempus-dominus.css",
     "rollup": "rollup -c ./build/rollup.config.js",
     "rollup-watch": "rollup -c ./build/rollup.config.js -w",
     "prettier": "prettier --write .",
