--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "module": "ES6",
     "target": "ES6",
-    "lib": ["es6", "dom", "es2016", "es2017", "dom.iterable", "es2019"],
+    "lib": ["es6", "dom", "es2016", "es2017", "dom.iterable", "es2019", "ES2021.String"],
     "moduleResolution": "node",
     "rootDir": "./src/js",
     "declarationDir": "./types",
