--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "scripts": {
     "start": "npm run build && concurrently \"npm:*-watch\" \"npm run serve\"",
     "serve": "browser-sync start --config build/browser-sync-config.js",
-    "build": "node ./build/copyToDist.js && npm run rollup",
+    "build": "node ./build/copyToDist.js && npm run rollup && npm run build:plugins",
     "build:plugins": "node ./build/plugins.js",
     "build:declarations": "tsc --declaration --emitDeclarationOnly --outDir types",
     "sass": "sass src/scss/tempus-dominus.scss ./dist/css/tempus-dominus.css",
@@ -27,7 +27,7 @@
     "prettier": "prettier --write .",
     "docs": "node ./src/docs/make.js",
     "docs-watch": "node ./src/docs/make.js --watch",
-    "release": "npm run build && npm run build:plugins && npm run build:declarations",
+    "release": "npm run build && npm run build:declarations",
     "release:version": "npm run release && node build/change-version.js"
   },
   "bugs": {
@@ -38,30 +38,30 @@
   },
   "description": "A robust and powerful date/time picker component. For usage, installation and demos see Project Site on GitHub",
   "devDependencies": {
-    "@popperjs/core": "^2.11.2",
-    "@rollup/plugin-node-resolve": "^13.1.3",
+    "@popperjs/core": "^2.11.6",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "@rollup/plugin-typescript": "^8.3.1",
     "@types/node": "^17.0.8",
-    "bootstrap": "^5.1.3",
-    "browser-sync": "^2.27.9",
-    "chokidar": "^3.5.1",
-    "clean-css": "^5.2.2",
+    "bootstrap": "^5.2.0",
+    "browser-sync": "^2.27.10",
+    "chokidar": "^3.5.3",
+    "clean-css": "^5.3.1",
     "concurrently": "^6.5.1",
     "dropcss": "^1.0.16",
-    "glob": "^7.2.0",
+    "glob": "^7.2.3",
     "globby": "^11.1.0",
     "html-minifier-terser": "^5.1.1",
     "jsdom": "^18.1.1",
-    "multiparty": "^4.2.2",
-    "prettier": "^2.5.1",
-    "rollup": "^2.64.0",
+    "multiparty": "^4.2.3",
+    "prettier": "^2.7.1",
+    "rollup": "^2.78.0",
     "rollup-plugin-postcss": "^4.0.2",
-    "rollup-plugin-typescript2": "0.31.1",
-    "sass": "^1.48.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "0.32.1",
+    "sass": "^1.54.4",
     "terser": "^5.10.0",
-    "tslib": "^2.3.1",
-    "typescript": "~4.5.4",
-    "rollup-plugin-terser":"^7.0.2",
-    "@rollup/plugin-typescript": "^8.3.1"
+    "tslib": "^2.4.0",
+    "typescript": "~4.7.4"
   },
   "homepage": "https://getdatepicker.com/",
   "keywords": [
