--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -1,7 +1,8 @@
-name: Publish Package
+name: Publish Nuget
 on:
-  release:
-    types: [ created ]
+  push:
+    paths:
+      - '**.nuspec'
 jobs:
   build:
     runs-on: ubuntu-latest
