--- a/src/nuget/TempusDominus.nuspec
+++ b/src/nuget/TempusDominus.nuspec
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<package xmlns="https://schemas.microsoft.com/packaging/2013/05/nuspec.xsd">
+<package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
     <metadata>
         <id>TempusDominus</id>
         <version>6.0.0-beta10</version>
