Move to functions

--- a/package.json
+++ b/package.json
@@ -36,6 +36,11 @@
   "peerDependencies": {
     "@popperjs/core": "^2.10.1"
   },
+  "peerDependenciesMeta": {
+    "@popperjs/core": {
+      "optional": true
+    }
+  },
   "description": "A robust and powerful date/time picker component. For usage, installation and demos see Project Site on GitHub",
   "devDependencies": {
     "@popperjs/core": "^2.11.6",
