--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
   "bugs": {
     "url": "https://github.com/eonasdan/tempus-dominus/issues"
   },
+  "optionalDependencies": {
+    "@popperjs/core": "^2.11.6"
+  },
   "description": "A robust and powerful date/time picker component. For usage, installation and demos see Project Site on GitHub",
   "devDependencies": {
     "@popperjs/core": "^2.11.6",
